// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ZecBalance renders component 1`] = `
<WithStyles(ForwardRef(Grid))
  alignItems="center"
  container={true}
>
  <Memo(ZcashIcon)
    className="icon-mock"
    size={14}
  />
  <WithStyles(ForwardRef(Typography))
    className="value-mock"
    style={
      Object {
        "fontSize": "0.7rem",
        "marginTop": 2,
      }
    }
    variant="caption"
  >
    3,243.253232
  </WithStyles(ForwardRef(Typography))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`ZecBalance renders when no value 1`] = `
<WithStyles(ForwardRef(Grid))
  alignItems="center"
  container={true}
>
  <Memo(ZcashIcon)
    className="icon-mock"
    size={14}
  />
  <WithStyles(ForwardRef(Typography))
    className="value-mock"
    style={
      Object {
        "fontSize": "0.7rem",
        "marginTop": 2,
      }
    }
    variant="caption"
  >
    -
  </WithStyles(ForwardRef(Typography))>
</WithStyles(ForwardRef(Grid))>
`;
